# nomos-rt

./: CMakeLists.txt  CMakePresets.json  README.md
include/nomos/rt/: abstract_modulator.hpp  dsp_block.hpp  event_scheduler.hpp  faust_dsp_adapter.hpp  input_event.hpp  ipc.hpp  ipc_channel.hpp  modulator_engine.hpp  modulator_registry.hpp  param_event.hpp  rcu.hpp  result.hpp  rt_control_thread.hpp  scheduled_event.hpp  session.hpp  spsc_queue.hpp  time_identity.hpp
src/: abstract_modulator.hpp  audio_device.cpp  audio_device.hpp  bools_ring_modulator.cpp  bools_ring_modulator.hpp  cipher_modulator.cpp  cipher_modulator.hpp  cv_channel_decoder.cpp  cv_channel_decoder.hpp  divine_cmos_modulator.cpp  divine_cmos_modulator.hpp  event_collector.cpp  event_collector.hpp  faust_modulator.cpp  faust_modulator.hpp  fractal_modulator.cpp  fractal_modulator.hpp  genie_modulator.cpp  genie_modulator.hpp  graph_modulator.cpp  graph_modulator.hpp  input_event_buffer.cpp  input_event_buffer.hpp  ipc_channel.cpp  lets_splosh_modulator.cpp  lets_splosh_modulator.hpp  link_peer.cpp  link_peer.hpp  midi_io.cpp  midi_io.hpp  midi_out_event.hpp  modulator_engine.cpp  modulator_engine.hpp  osc_server.cpp  osc_server.hpp  rt_control_thread.cpp  segment_modulator.cpp  segment_modulator.hpp  session.cpp  shift_register_modulator.cpp  (+14 more)
tests/: CMakeLists.txt  test_bools_ring_modulator.cpp  test_cipher_modulator.cpp  test_cv_channel_decoder.cpp  test_divine_cmos_modulator.cpp  test_faust_modulator.cpp  test_fractal_modulator.cpp  test_genie_modulator.cpp  test_graph_modulator.cpp  test_lets_splosh_modulator.cpp  test_modulator_engine.cpp  test_segment_modulator.cpp  test_shift_register_modulator.cpp  test_slew_modulator.cpp  test_slope_modulator.cpp  test_sloth_chaos_modulator.cpp  test_spsc_queue.cpp  test_squid_axon_modulator.cpp  test_statues_modulator.cpp  test_stochastic_modulator.cpp  test_time_identity.cpp
